[gd_scene load_steps=3 format=2]

[ext_resource path="res://register/RegisterScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/panel_rect.png" type="Texture" id=2]

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.32549, 0.580392, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.0352941, 0.12549, 0.278431, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -189.0
margin_right = 227.0
margin_bottom = 189.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.5
margin_top = -105.0
margin_right = 170.5
margin_bottom = 105.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 341.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnterUsernameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 341.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Please enter your username and password:"

[node name="UsernameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 341.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Username"

[node name="PasswordEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 341.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
secret = true
placeholder_text = "Password"

[node name="RegisterButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 341.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Register"

[node name="OrLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 147.0
margin_right = 341.0
margin_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OR"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 341.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 168.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Login"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 341.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "join as guest"

[node name="Notification" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 341.0
margin_bottom = 210.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
